# cWicked

./: .clang-format  .clangd  .gitattributes  .gitignore  compile_commands.json  log.txt  meson.build  meson.options  meson_native.ini  refresh_meson.sh  refresh_swigged.sh  refresh_wicked.sh  setup_meson.sh  setup_wicked.sh
pch/: wi_full_pch.h  wi_min_pch.h  wi_pch.h
src/: cWicked.cpp  cWicked.h  copied.h  cwicked.h  swigged_cwicked.swg  swigged_cwicked_wrap.cxx  swigged_cwicked_wrap.h  wi.hpp  wi_application.cpp  wi_ecs.cpp  wi_graphics.cpp  wi_initializer.cpp  wi_input.cpp  wi_jobsystem.cpp  wi_render.cpp  wi_renderer.cpp  wi_scene.cpp  wi_various.cpp
src/demo/: main.c
src/demos/: demos.h  main.c
src/tmpcpp/: main.cpp  tests.cpp  tmpl.cpp
src/tmpcpp/witests/: Tests.cpp  main_SDL2.cpp  stdafx.h
src/wi01_loadlua/: main.cpp
src/wi02_tests/: main.cpp
src/wi03_animteapot/: main.cpp
src/wi04_charactercontroller/: app.h  camera.cpp  character.cpp  game.cpp  main.cpp
src/wiso/: wiso.cpp  wiso.hpp
